...
}

class GameViewModel {
    private var store: GameEngine<Bool>

    @Published var question: String!
    @Published var scoreText: String! = "Score: 0"
    @Published var progress: Float = 0.0
    @Published var trueButtonColor: UIColor? = UIColor.clear
    @Published var falseButtonColor: UIColor? = UIColor.clear
    @Published var enableTrueButton: Bool = true
    @Published var enableFalseButton: Bool = true

...
